--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,6 @@ add_executable(LearnCpp main.cpp
         Chap8/prime.h
         Chap8/hifi_game.h
         Chap8/hifi_game.cpp
+        Chap11/add.h
+        Chap11/add.cpp
 )
